More fixes on mobile.

--- a/scss/partials/_about.scss
+++ b/scss/partials/_about.scss
@@ -126,7 +126,7 @@ div.ovals-container {
   @include mobile(){
     div.paragraphs-container {
       position: relative;
-      padding: 100px 0;
+      padding: 50px 0;
 
       div.happy-face {
         position: absolute;
